--- a/views/index.ejs
+++ b/views/index.ejs
@@ -114,10 +114,10 @@
 
 	<div id="button-row"class="col-md-12 col-sm-12 text-center">
 		<div class="btn-group" role="group" aria-label="blank">
-		  	<button id="micro" type="button" class="map-btn map-btn-left btn btn-default">Show Micro Breweries</button>
-		  	<button id="nano" type="button" class="map-btn btn btn-default">Show Nano Breweries</button>
-		  	<button id="brewpub" type="button" class="map-btn btn btn-default">Show Brew Pubs</button>
-		  	<button id="all" type="button" class="map-btn map-btn-right btn btn-default">Show All Locations</button>
+		  	<button id="micro" type="button" class="map-btn map-btn-left btn btn-default">Micro Brews</button>
+		  	<button id="nano" type="button" class="map-btn btn btn-default">Nano Brews</button>
+		  	<button id="brewpub" type="button" class="map-btn btn btn-default">Brew Pubs</button>
+		  	<button id="all" type="button" class="map-btn map-btn-right btn btn-default">All Brews</button>
 		</div>
 	</div>
 	<!-- <div class="transparent-index col-md-12 col-sm-12"> -->
