--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -12,14 +12,6 @@ body {
 	position: relative;
 }
 
-/*.footer {
-	width: 100%;
-	height: 50px;
-	position: fixed;
-	bottom: 0;
-	background-color: #000;
-}*/
-
 .footer {
 	width: 100%;
 	height: 50px;
@@ -252,6 +244,7 @@ i.fa {
 	color: #000;
 	padding-left: 10px;
 	padding-right: 10px;
+	margin-bottom: 150px;
 }
 
 #about-h1 {
@@ -312,7 +305,11 @@ i.fa {
 	.map-btn {
 		border-radius: 0;
 		width: 70px;
-		font-size: 6px;
+		font-size: 9px;
+	}
+
+	.map-btn a:clicked {
+		color: #fff;
 	}
 
 	#user-greeting {
