--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,14 +7,14 @@
 </div>
 
 <div class="col-md-8 col-sm-8 col-md-offset-2 col-md-offset-2">
-	<p>I'm passionate about technology, music, and you guessed it... local beer. I am a web developer, with experience in Javascript, Node.js, jQuery, Express.js, Ruby on Rails, HTML5, and CSS3. This list continues to grow, as I'm a passionate life long learner and always looking for ways to push myself in this field. Feel free to connect with me! 
+	<p>I'm passionate about technology, music, and you guessed it... local beer. I am a web developer, with experience in Javascript, Node.js, jQuery, Express.js, AngularJS, Sails, Ruby on Rails, HTML5, and CSS3. I also have experience using both Postgres and MongoDB on projects. This list continues to grow, as I'm a passionate life long learner and always looking for ways to push myself in this field. Feel free to connect with me!
 	</p>
 </div>
 
 <div id="social-icons" class="col-md-12 col-sm-12 text-center">
 	<a href="https://twitter.com/nicklathe"><i class="fa fa-twitter-square fa-3x"></i></a>
 	<a href="https://www.linkedin.com/in/nicklathe"><i class="fa fa-linkedin-square fa-3x"></i></a>
-	<a href="https://www.facebook.com/nickalathe"><i class="fa fa-facebook-square fa-3x"></i></a>
+	<a href="https://www.github.com/nicklathe"><i class="fa fa-github-square fa-3x"></i></a>
 </div>
 
 <% include footer %>
