--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,6 @@
 <% include alerts %>
 
 <!-- <div class="row"> -->
-
 	<div id="map-outer"class="col-md-12 col-sm-12">
 
 		<div class="custom-popup" id='map'></div>
@@ -129,7 +128,7 @@
 			<div class="main-text">
 				<p>Seattle has long been in the business of brewing beer. Begining in the 1880's with Rainier Brewing, through the kick off of the micro brewing scene in the 1980's, to the current day with over 30 breweries located within the city of Seattle propper. Lucky for you, there is no sign of slowing down. For Seattleites, there are endless options when it comes to finding a great brewery nearby.</p>
 
-				<p>This app allows you to narrow down your search, get some info on a specific brewery, and save your favorite breweries so you can remember who brews that fantastic IPA you had one too many of the other night. Create a user account to fully enjoy the full features of this app. Happy drinking!</p>
+				<p>This app allows you to narrow down your search, get some info on a specific brewery, and save your favorite breweries so you can remember who brews that fantastic IPA you had one too many of the other night. Create a user account to enjoy the full features of this app. Happy drinking!</p>
 				<hr>
 			</div>
 		</div>
