--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,21 +1,26 @@
 <% include header %>
 
-<div id="list-outer" class="col-md-6 col-sm-6 col-md-offset-4 col-md-offset-4">
-    <h1 id="fav-list-h1"><%= user.name %>'s Favorite Breweries</h1>
+<div id="list-outer" class="col-md-6 col-sm-6 col-md-offset-3 col-md-offset-4">
 
-<% for(var i = 0; i < returnedList.length; i++) { %>
-
-<!-- <li><a class="fav-list" href="/brewery/<%= returnedList[i].brewery_id%>"><%= returnedList[i].brewery_name %></a></li> -->
-
-    <!-- <h4><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> - <%= returnedList[i].brewery_name %></h4> -->
-    <li><a class="fav-list" href="/brewery/<%= returnedList[i].brewery_id%>"><%= returnedList[i].brewery_name %></a><button data-id="<%= returnedList[i].brewery_id %>" type="submit" class="btn btn-primary btn-sm  deleteBrewery">Delete</button></li>
-
-
-<% } %>
-
+    <div class="text-center">
+        <h1 id="fav-list-h1"><%= user.name %>'s Favorite Breweries</h1>
+    </div>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Brewery</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <% for(var i = 0; i < returnedList.length; i++) { %>
+            <tr>
+                <td><a class="fav-list" href="/brewery/<%= returnedList[i].brewery_id%>"><%= returnedList[i].brewery_name %></a></td>
+                <td><button data-id="<%= returnedList[i].brewery_id %>" type="submit" class="btn btn-primary btn-sm btn-danger deleteBrewery">Delete</button></td>
+            </tr>
+            <% } %>
+        </tbody>
+    </table>
 </div>
 
 <% include footer %>
-
-<!-- </body>
-</html> -->
